# go-code

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  Makefile  WORKSPACE  deps.bzl  go.mod  go.sum
.devcontainer/: devcontainer.json
algorithms/: BUILD.bazel  Makefile  binary_gap_test.go  codility_test.go  insert_sort_test.go  main.go  merge_sort_test.go  quick_sort_test.go
delivery/: BUILD.bazel  Makefile  catalog.go  delivery_test.go  store.go
fiber-test/: go.mod  main.go
financial/: BUILD.bazel  Makefile  bank.go  bank_test.go  money.go  money_test.go
idl/: dhpspb
idl/dhps/: BUILD.bazel  dhcps.proto  dhps.proto
internal/financial/: financial.go
internal/financial/bank/: bank.go
internal/financial/money/: money.go  money_test.go
internal/trade/barcode/: barcode.go
ordering/: BUILD.bazel  Makefile  ordering_test.go
proto/delivery/: BUILD.bazel  customer.proto  delivery.proto
proto/pong/: BUILD.bazel
protobuf/delivery/: BUILD.bazel  delivery.proto
protobuf/delivery/courier/: BUILD.bazel
protobuf/delivery/customer/: BUILD.bazel  customer.proto
protobuf/delivery/storemanager/: BUILD.bazel  store.proto  storemanager.proto
protobuf/delivery/waiter/: BUILD.bazel  waiter.proto
protobuf/pong/: BUILD.bazel  pong.proto
scripts/: Makefile
src/algorithms/: BUILD.bazel  binary_gap_test.go  codility_test.go  insert_sort_test.go  longest_palindromic_substr_test.go  merge_sort_test.go  quick_sort_test.go
src/cmd/dhps/: BUILD.bazel  Makefile  main.go
src/cmd/dhps/yabs/: customerAsksForAProduct.yml  customerLooksForProduct.yml  req.sh
src/cmd/mgbench/: BUILD.bazel  Makefile
src/cmd/pong/: BUILD.bazel  Makefile  main.go
src/delivery/: BUILD.bazel  Makefile  courier.go  customer.go  delivery_test.go  product.go
src/delivery/cmd/delivery/: BUILD.bazel  main.go
src/delivery/config/: delivery.yml
src/delivery/internal/app/: BUILD.bazel  app.go  grpc_customer.go  grpc_customer_asks_for_product.go  module.go  repository_registry.go
src/delivery/internal/app/apicustomer/: BUILD.bazel  customer.go  customer_asks_for_product.go
src/delivery/internal/app/apistoremanager/: BUILD.bazel  store_manager.go  store_manager_register_store.go
src/delivery/internal/app/bus/: BUILD.bazel
src/delivery/internal/app/config/: BUILD.bazel  config.go
src/delivery/internal/app/grpc/: BUILD.bazel  storemanager.go
src/delivery/internal/app/log/: BUILD.bazel  log.go
src/delivery/internal/app/logging/: BUILD.bazel  logging.go
src/delivery/internal/app/nosql/: BUILD.bazel  nosql.go
src/delivery/internal/app/registry/: BUILD.bazel  registry.go
src/delivery/internal/courier/: BUILD.bazel
src/delivery/internal/courier/grpc/: BUILD.bazel
src/delivery/internal/customer/: BUILD.bazel  asks_for_a_product.go  customer.go  customer_test.go  fields.go  fields_test.go  repository.go
src/delivery/internal/customer/grpc/: BUILD.bazel  asks_for_a_product.go  asks_for_product.go  server.go
src/delivery/internal/product/: BUILD.bazel  field_test.go  fields.go  product.go  product_test.go  repository.go
src/delivery/internal/store/: BUILD.bazel  fields.go  manager.go  repository.go  store.go
src/delivery/internal/storemanager/: BUILD.bazel  forms.go  grpc.go  registers_a_product.go  registers_a_store.go  registers_products.go  storemanager.go
src/delivery/internal/storemanager/grpc/: BUILD.bazel  registers_a_product.go  registers_a_store.go  registers_products.go  server.go
src/delivery/internal/waiter/: BUILD.bazel  fields.go  repository.go  waiter.go
src/delivery/scripts/reqs/: req.sh
src/delivery/scripts/reqs/storemanager/: addStore.yml  registersAProduct.yml  registersAStore.yml  registersProducts.yml
src/financial/: BUILD.bazel  Makefile  bank_test.go  money_test.go
src/internal/dhps/app/: BUILD.bazel  delivery_service.go  module.go
src/internal/dhps/domain/: BUILD.bazel  courier_looks_for_product.go  module.go
src/internal/dhps/infra/: BUILD.bazel  assistant_inmemory_repository.go  customer_inmemory_repository.go  module.go
src/jte/cmd/jte/: BUILD.bazel
src/mgbench/cmd/mgbench/: BUILD.bazel
src/ordering/: BUILD.bazel  Makefile  ordering_test.go
src/pkg/algorithms/: BUILD.bazel  Makefile  binary_gap_test.go  codility_test.go  insert_sort_test.go  merge_sort_test.go  quick_sort_test.go
src/pkg/cmp/: BUILD.bazel  cmp.go
src/pkg/delivery/: BUILD.bazel  address.go  assistant.go  cashier.go  delivery_test.go  product.go  store.go
src/pkg/financial/: BUILD.bazel  bank.go  bank_test.go  money.go  money_test.go
src/pkg/gglpb/: BUILD.bazel
src/pkg/grpc/: BUILD.bazel  grpc.go
src/pkg/ordering/: BUILD.bazel  ordering_test.go
src/pkg/repository/: BUILD.bazel  cmp.go  repository.go
src/pkg/types/: BUILD.bazel  types.go
src/playground/cmd/example1/: BUILD.bazel
src/playground/internal/example1/: BUILD.bazel  example1_test.go
src/pong/: BUILD.bazel  service.go
src/pong/cmd/pong/: BUILD.bazel  main.go
tools/lvim/: config.lua
tools/tmux/: tmux.conf
