load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "dhpspb",
    embed = [":dhpspb_go_proto"],
    importpath = "github.com/joseluis8906/go-code/idl/dhpspb",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "deliverypb_proto",
    srcs = ["delivery.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:wrappers_proto"],
)

go_proto_library(
    name = "deliverypb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/joseluis8906/go-code/idl/deliverypb",
    proto = ":deliverypb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "deliverypb",
    embed = [":deliverypb_go_proto"],
    importpath = "github.com/joseluis8906/go-code/idl/deliverypb",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "customerpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/joseluis8906/go-code/protobuf/delivery/customerpb",
    proto = ":deliverypb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "customerpb",
    embed = [":customerpb_go_proto"],
    importpath = "github.com/joseluis8906/go-code/protobuf/delivery/customerpb",
    visibility = ["//visibility:public"],
)
