load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "waiterpb_proto",
    srcs = ["courier.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//protobuf/delivery:deliverypb_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "waiterpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/joseluis8906/go-code/protobuf/deliver/waiterpb",
    proto = ":waiterpb_proto",
    visibility = ["//visibility:public"],
    deps = ["//protobuf/delivery:deliverypb"],
)

go_library(
    name = "waiterpb",
    embed = [":waiterpb_go_proto"],
    importpath = "github.com/joseluis8906/go-code/protobuf/deliver/waiterpb",
    visibility = ["//visibility:public"],
)
