load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "customerpb_proto",
    srcs = ["customer.proto"],
    visibility = ["//visibility:public"],
    deps = ["//protobuf/delivery:deliverypb_proto"],
)

go_proto_library(
    name = "customerpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/joseluis8906/go-code/protobuf/delivery/customerpb",
    proto = ":customerpb_proto",
    visibility = ["//visibility:public"],
    deps = ["//protobuf/delivery:deliverypb"],
)

go_library(
    name = "customerpb",
    embed = [":customerpb_go_proto"],
    importpath = "github.com/joseluis8906/go-code/protobuf/delivery/customerpb",
    visibility = ["//visibility:public"],
)
