load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dhps_lib",
    srcs = ["main.go"],
    importpath = "github.com/joseluis8906/go-code/src/cmd/dhps",
    visibility = ["//visibility:private"],
    deps = ["@org_uber_go_fx//:fx"],
)

go_binary(
    name = "dhps",
    embed = [":dhps_lib"],
    visibility = ["//visibility:public"],
)
