load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dhps_lib",
    srcs = ["main.go"],
    importpath = "github.com/joseluis8906/go-code/src/cmd/dhps",
    visibility = ["//visibility:private"],
    deps = [
        "//idl/dhps:dhpspb",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_fx//:fx",
    ],
)

go_binary(
    name = "dhps",
    embed = [":dhps_lib"],
    visibility = ["//visibility:public"],
)
