load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "delivery",
    srcs = [
        "address.go",
        "assistant.go",
        "catalog.go",
        "courier.go",
        "customer.go",
        "order.go",
        "product.go",
        "store.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/pkg/delivery",
    visibility = ["//visibility:public"],
)

go_test(
    name = "delivery_test",
    srcs = ["delivery_test.go"],
    deps = [":delivery"],
)
