load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "delivery_lib",
    srcs = ["main.go"],
    importpath = "github.com/joseluis8906/go-code/src/delivery/cmd/delivery",
    visibility = ["//visibility:private"],
    deps = [
        "//src/delivery/internal/app",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "delivery",
    embed = [":delivery_lib"],
    visibility = ["//visibility:public"],
)
