load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "app.go",
        "module.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/delivery/internal/app",
    visibility = ["//src/delivery:__subpackages__"],
    deps = [
        "//protobuf/delivery/customer:customerpb",
        "//src/delivery/internal/app/apicustomer",
        "//src/delivery/internal/app/apistoremanager",
        "//src/delivery/internal/app/bus",
        "//src/delivery/internal/app/config",
        "//src/delivery/internal/app/logging",
        "//src/delivery/internal/app/nosql",
        "//src/delivery/internal/app/registry",
        "//src/delivery/internal/customer",
        "//src/delivery/internal/product",
        "//src/delivery/internal/waiter",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_fx//:fx",
    ],
)
