load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "app",
    srcs = [
        "app.go",
        "module.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/delivery/internal/app",
    visibility = ["//src/delivery:__subpackages__"],
    deps = [
        "//protobuf/delivery/customer:customerpb",
        "//protobuf/delivery/storemanager:storemanagerpb",
        "//src/delivery/internal/app/bus",
        "//src/delivery/internal/app/config",
        "//src/delivery/internal/app/log",
        "//src/delivery/internal/app/nosql",
        "//src/delivery/internal/app/registry",
        "//src/delivery/internal/customer",
        "//src/delivery/internal/customer/grpc",
        "//src/delivery/internal/store",
        "//src/delivery/internal/storemanager/grpc",
        "@com_github_spf13_viper//:viper",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc//:otlptracegrpc",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_fx//:fx",
    ],
)
