load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "customer",
    srcs = [
        "customer.go",
        "fields.go",
        "repository.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/delivery/internal/customer",
    visibility = ["//src/delivery:__subpackages__"],
    deps = [
        "//src/pkg/repository",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "customer_test",
    srcs = ["fields_test.go"],
    embed = [":customer"],
    deps = ["//src/pkg/cmp"],
)
