load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "product",
    srcs = [
        "fields.go",
        "product.go",
        "repository.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/delivery/internal/product",
    visibility = ["//src/delivery:__subpackages__"],
    deps = [
        "//src/pkg/cmp",
        "//src/pkg/repository",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "product_test",
    srcs = ["product_test.go"],
    embed = [":product"],
    deps = ["@com_github_stretchr_testify//assert"],
)
