load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "store",
    srcs = [
        "fields.go",
        "repository.go",
        "store.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/delivery/internal/store",
    visibility = ["//src/delivery:__subpackages__"],
    deps = [
        "//protobuf/delivery:deliverypb",
        "//src/delivery/internal/product",
        "//src/pkg/repository",
        "//src/pkg/types",
        "@io_opentelemetry_go_otel//:otel",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/bsontype",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "store_test",
    srcs = ["fields_test.go"],
    embed = [":store"],
    deps = [
        "//src/pkg/cmp",
        "@org_mongodb_go_mongo_driver//bson",
    ],
)
