load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storemanager",
    srcs = [
        "forms.go",
        "registers_a_store.go",
        "registers_products.go",
        "reports_order_is_ready.go",
        "reports_order_is_taken.go",
        "storemanager.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/delivery/internal/storemanager",
    visibility = ["//src/delivery:__subpackages__"],
    deps = [
        "//src/delivery/internal/product",
        "//src/delivery/internal/store",
        "//src/pkg/repository",
    ],
)
