load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storemanager",
    srcs = [
        "grpc.go",
        "storemanager.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/delivery/internal/storemanager",
    visibility = ["//src/delivery:__subpackages__"],
    deps = [
        "//protobuf/delivery/storemanager:storemanagerpb",
        "//src/delivery/internal/product",
        "//src/delivery/internal/store",
        "//src/pkg/grpc",
        "//src/pkg/repository",
        "@io_opentelemetry_go_otel//:otel",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
