load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "waiter",
    srcs = ["waiter.go"],
    importpath = "github.com/joseluis8906/go-code/src/delivery/internal/waiter",
    visibility = ["//src/delivery:__subpackages__"],
    deps = [
        "//src/delivery/internal/product",
        "//src/pkg/repository",
    ],
)
