load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "courier_looks_for_product.go",
        "module.go",
    ],
    importpath = "github.com/joseluis8906/go-code/src/internal/dhps/domain",
    visibility = ["//src:__subpackages__"],
    deps = [
        "//src/pkg/delivery",
        "@org_uber_go_fx//:fx",
    ],
)
