load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mgbench_lib",
    srcs = ["main.go"],
    importpath = "github.com/joseluis8906/go-code/src/mgbench/cmd/mgbench",
    visibility = ["//visibility:private"],
    deps = [
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_binary(
    name = "mgbench",
    embed = [":mgbench_lib"],
    visibility = ["//visibility:public"],
)
