load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pong_lib",
    srcs = ["main.go"],
    importpath = "github.com/joseluis8906/go-code/src/pong/cmd/pong",
    visibility = ["//visibility:private"],
    deps = [
        "//protobuf/pong:pongpb",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_fx//:fx",
    ],
)

go_binary(
    name = "pong",
    embed = [":pong_lib"],
    visibility = ["//visibility:public"],
)
